--- a/silk/build.gradle
+++ b/silk/build.gradle
@@ -46,4 +46,7 @@ dependencies {
 
     //Google sign In
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
+
+    //Navigation Drawer
+    implementation 'com.google.android.material:material:1.0'
 }
