--- a/silk/src/main/AndroidManifest.xml
+++ b/silk/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:name=".HomeActivity"
+            android:label=""
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
