--- a/silk/build.gradle
+++ b/silk/build.gradle
@@ -49,4 +49,14 @@ dependencies {
 
     //Navigation Drawer
     implementation 'com.google.android.material:material:1.0'
+
+    //Glide Image Library
+    implementation ("com.github.bumptech.glide:glide:4.9.0") {
+        exclude group: "com.android.support"
+    }
+    annotationProcessor 'androidx.annotation:annotation:1.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation ("com.github.bumptech.glide:glide:4.9.0@aar") {
+        transitive = true
+    }
 }
